syntax = "proto3";

option csharp_namespace = "Shared.User.Grpc.Proto";

package users;

service Users {
  rpc GetUserInfoById (GetUserInfoRequest) returns (GetUserInfoResponse);
}

message GetUserInfoRequest {
  string user_id = 1;
}

message UserInfo {
  string id = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
}

message GetUserInfoResponse {
  UserInfo user = 1;
}
